--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65d9d104",
+   "id": "4833a454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f451c803",
+   "id": "d62aade2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4bd818ab",
+   "id": "132c3317",
    "metadata": {},
    "outputs": [
     {
@@ -147,8 +147,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "09e9e5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16472 entries, 0 to 16471\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                         Non-Null Count  Dtype \n",
+      "---  ------                         --------------  ----- \n",
+      " 0   County                         16472 non-null  object\n",
+      " 1   Data Generation Date           16472 non-null  object\n",
+      " 2   OSHPD Project Status           16472 non-null  object\n",
+      " 3   Total Costs of OSHPD Projects  16472 non-null  object\n",
+      " 4   Number of OSHPD Projects       16472 non-null  int64 \n",
+      " 5   Collection of Counties         4544 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 772.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b0c7dc9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename column, lower case nospace\n",
+    "\n",
+    "df.columns = df.columns.str.lower()\n",
+    "df.columns = df.columns.str.replace(\" \",\"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f0384f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16472 entries, 0 to 16471\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                         Non-Null Count  Dtype \n",
+      "---  ------                         --------------  ----- \n",
+      " 0   county                         16472 non-null  object\n",
+      " 1   data_generation_date           16472 non-null  object\n",
+      " 2   oshpd_project_status           16472 non-null  object\n",
+      " 3   total_costs_of_oshpd_projects  16472 non-null  object\n",
+      " 4   number_of_oshpd_projects       16472 non-null  int64 \n",
+      " 5   collection_of_counties         4544 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 772.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d655834b",
+   "id": "270993e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80649555",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0eb1778",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92736799",
    "metadata": {},
    "outputs": [],
    "source": []
