--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4833a454",
+   "id": "d43af406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d62aade2",
+   "id": "f7af95f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "132c3317",
+   "id": "15ef0d4d",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "09e9e5f2",
+   "id": "86150f3c",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b0c7dc9b",
+   "id": "4cbe5135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f0384f09",
+   "id": "58c4ee8f",
    "metadata": {},
    "outputs": [
     {
@@ -220,32 +220,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "270993e1",
+   "execution_count": 15,
+   "id": "0786b3a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county</th>\n",
+       "      <th>data_generation_date</th>\n",
+       "      <th>oshpd_project_status</th>\n",
+       "      <th>total_costs_of_oshpd_projects</th>\n",
+       "      <th>number_of_oshpd_projects</th>\n",
+       "      <th>collection_of_counties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Review</td>\n",
+       "      <td>$50914315.00</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>Pending Construction</td>\n",
+       "      <td>$840182510.04</td>\n",
+       "      <td>126</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Construction</td>\n",
+       "      <td>$994352932.29</td>\n",
+       "      <td>181</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Closure</td>\n",
+       "      <td>$65255928.88</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>02 - Alpine</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Review</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         county data_generation_date  oshpd_project_status  \\\n",
+       "0  01 - Alameda            9/30/2013             In Review   \n",
+       "1  01 - Alameda            9/30/2013  Pending Construction   \n",
+       "2  01 - Alameda            9/30/2013       In Construction   \n",
+       "3  01 - Alameda            9/30/2013            In Closure   \n",
+       "4   02 - Alpine            9/30/2013             In Review   \n",
+       "\n",
+       "  total_costs_of_oshpd_projects  number_of_oshpd_projects  \\\n",
+       "0                  $50914315.00                        45   \n",
+       "1                 $840182510.04                       126   \n",
+       "2                 $994352932.29                       181   \n",
+       "3                  $65255928.88                        81   \n",
+       "4                         $0.00                         0   \n",
+       "\n",
+       "  collection_of_counties  \n",
+       "0      Bay Area Counties  \n",
+       "1      Bay Area Counties  \n",
+       "2      Bay Area Counties  \n",
+       "3      Bay Area Counties  \n",
+       "4                    NaN  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5eb003b7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert total cost column to float\n",
+    "df.total_costs_of_oshpd_projects=df.total_costs_of_oshpd_projects.str.replace(\"$\",\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c92bd92a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.total_costs_of_oshpd_projects=pd.to_numeric(df.total_costs_of_oshpd_projects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f3e4ac28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16472 entries, 0 to 16471\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                         Non-Null Count  Dtype  \n",
+      "---  ------                         --------------  -----  \n",
+      " 0   county                         16472 non-null  object \n",
+      " 1   data_generation_date           16472 non-null  object \n",
+      " 2   oshpd_project_status           16472 non-null  object \n",
+      " 3   total_costs_of_oshpd_projects  16472 non-null  float64\n",
+      " 4   number_of_oshpd_projects       16472 non-null  int64  \n",
+      " 5   collection_of_counties         4544 non-null   object \n",
+      "dtypes: float64(1), int64(1), object(4)\n",
+      "memory usage: 772.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0b2d2734",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county</th>\n",
+       "      <th>data_generation_date</th>\n",
+       "      <th>oshpd_project_status</th>\n",
+       "      <th>total_costs_of_oshpd_projects</th>\n",
+       "      <th>number_of_oshpd_projects</th>\n",
+       "      <th>collection_of_counties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Review</td>\n",
+       "      <td>50914315.00</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>Pending Construction</td>\n",
+       "      <td>840182510.04</td>\n",
+       "      <td>126</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Construction</td>\n",
+       "      <td>994352932.29</td>\n",
+       "      <td>181</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01 - Alameda</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Closure</td>\n",
+       "      <td>65255928.88</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Bay Area Counties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>02 - Alpine</td>\n",
+       "      <td>9/30/2013</td>\n",
+       "      <td>In Review</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         county data_generation_date  oshpd_project_status  \\\n",
+       "0  01 - Alameda            9/30/2013             In Review   \n",
+       "1  01 - Alameda            9/30/2013  Pending Construction   \n",
+       "2  01 - Alameda            9/30/2013       In Construction   \n",
+       "3  01 - Alameda            9/30/2013            In Closure   \n",
+       "4   02 - Alpine            9/30/2013             In Review   \n",
+       "\n",
+       "   total_costs_of_oshpd_projects  number_of_oshpd_projects  \\\n",
+       "0                    50914315.00                        45   \n",
+       "1                   840182510.04                       126   \n",
+       "2                   994352932.29                       181   \n",
+       "3                    65255928.88                        81   \n",
+       "4                           0.00                         0   \n",
+       "\n",
+       "  collection_of_counties  \n",
+       "0      Bay Area Counties  \n",
+       "1      Bay Area Counties  \n",
+       "2      Bay Area Counties  \n",
+       "3      Bay Area Counties  \n",
+       "4                    NaN  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80649555",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0eb1778",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92736799",
+   "id": "3b90557e",
    "metadata": {},
    "outputs": [],
    "source": []
