--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d43af406",
+   "id": "8a630899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f7af95f6",
+   "id": "3d9c2aa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "15ef0d4d",
+   "id": "efc0538f",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "86150f3c",
+   "id": "4793a20b",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4cbe5135",
+   "id": "96377ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "58c4ee8f",
+   "id": "37ade301",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0786b3a5",
+   "id": "f341e5e7",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5eb003b7",
+   "id": "3bc4052f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c92bd92a",
+   "id": "ccc93191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f3e4ac28",
+   "id": "c772a176",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0b2d2734",
+   "execution_count": 24,
+   "id": "a4a3298e",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "      <td>In Review</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -491,22 +491,81 @@
        "1      Bay Area Counties  \n",
        "2      Bay Area Counties  \n",
        "3      Bay Area Counties  \n",
-       "4                    NaN  "
+       "4                  Other  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "232bc1a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Other                           11928\n",
+       "Bay Area Counties                2556\n",
+       "Greater Sacramento Counties      1136\n",
+       "Greater Los Angeles Counties      852\n",
+       "Name: collection_of_counties, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# handle nan\n",
+    "df.collection_of_counties.fillna(\"Other\",inplace=True)\n",
+    "df.collection_of_counties.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "30a21986",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2110\n",
+       "1      1354\n",
+       "2      1201\n",
+       "3       925\n",
+       "4       685\n",
+       "       ... \n",
+       "487       1\n",
+       "567       1\n",
+       "583       1\n",
+       "727       1\n",
+       "879       1\n",
+       "Name: number_of_oshpd_projects, Length: 433, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.number_of_oshpd_projects.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b90557e",
+   "id": "827123cc",
    "metadata": {},
    "outputs": [],
    "source": []
